# buoy

./: .gitignore  Cargo.toml  deploy.toml  justfile
apple/Buoy/: Info.plist
apple/Buoy/Buoy/: BuoyApp.swift  ContentView.swift  Sync.swift
apple/Buoy/Buoy.xcodeproj/: project.pbxproj
apple/BuoyCorePackage/: Package.swift
apple/Lagoon/: Info.plist  Lagoon.entitlements
apple/Lagoon/Lagoon/: ContentView.swift  LagoonApp.swift  Sync.swift
apple/Lagoon/Lagoon.xcodeproj/: project.pbxproj
apple/LagoonCorePackage/: Package.swift
crates/apple-ffi/: Cargo.toml
crates/apple-ffi/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: embed.rs  error.rs  lib.rs  search.rs  store.rs  sync.rs
crates/linux/src/: main.rs
crates/server/: Cargo.toml  buoy.toml  lagoon.toml
crates/server/src/: api.rs  config.rs  main.rs
deploy/: buoy.service  lagoon.service  provision.sh
docs/: plan-buildout.md  plan-poc.md
scripts/: smoke-test.swift
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/components/: Snippet.tsx  SuggestionStrip.tsx  ThoughtRow.tsx
web/src/lib/: format.ts  theme.ts
