[package]
name = "lagoon-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "lagoon_core"
crate-type = ["rlib", "staticlib"]

[dependencies]
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
thiserror = "2"
# fancy-regex keeps the tokenizer pure Rust; the default onig C backend
# fails to link for aarch64-apple-ios (Phase 3 spike finding, see the
# spike/candle-embeddings branch).
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
uuid = { version = "1", features = ["v4"] }

# Accelerate speeds up candle's matmuls on Apple platforms.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
candle-core = { version = "0.10", features = ["accelerate"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
