[package]
name = "buoy-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "buoy-server"
path = "src/main.rs"

[dependencies]
buoy-core = { path = "../core" }
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
